--- a/Biologia.mw
+++ b/Biologia.mw
@@ -44,6 +44,17 @@ Anting metung a agham, pilan neng dalang banwa ing agham-biye, at dakal yang dak
 [[Virology]] --
 [[Zoology]]
 
+== ==
+<gallery>
+File:Guriezo Adino vaca toro terneras.jpg|Animalia - Bos primigenius taurus
+File:Zboże.jpg|Planta - Triticum
+File:Morchella esculenta 08.jpg|Fungi - Morchella esculenta
+File:Fucus serratus2.jpg|Stramenopila/Chromista - Fucus serratus
+File:Gemmatimonas aurantiaca.jpg|Bacteria - Gemmatimonas aurantiaca (- = 1 Micrometer)
+File:Halobacteria.jpg|Archaea - Halobacteria
+File:Gamma phage.png|Virus - Gamma phage
+</gallery>
+
 [[Category:Anatomy]]
 [[Category:Biologia|*]]
 
