--- a/Virus.mw
+++ b/Virus.mw
@@ -33,7 +33,7 @@ Image:Norwalk.jpg|[[Norovirus]]. Ining RNA virus ing mágdala king winter vomiti
 
 Image:Caliciviruses2.jpg|Kamaganak do reng Calicivirus deng Norovirus.
 
-Image:Human Torovirus.jpg|Torovirus. Metung a RNA virus a enveloped (maki súput).
+Image:467px-Human Torovirus.jpg|Torovirus. Metung a RNA virus a enveloped (maki súput).
 
 Image:Coronaviruses 004 lores.jpg|Deng Coronavirus metung lang uri da reng virus a maki halo (sinag), o itsurang balamu korona king lalam ning microscope.
 
